# github-release-tag

./: Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  changelog.rs  github.rs  main.rs  utils.rs
