[package]
name = "github-release-tag"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "github-release-tag"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
octocrab = "0.32"
semver = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git-conventional = "0.12" # For parsing commit messages
regex = "1.10"
glob = "0.3.1"
mime_guess = "2.0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }